saved the weights of the model , loaded the trained weights and used the model to get response for a given instruction

--- a/preParingDataSet.ipynb
+++ b/preParingDataSet.ipynb
@@ -425,16 +425,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([8, 58])\n",
-      "torch.Size([8, 58])\n",
-      "torch.Size([8, 88])\n",
-      "torch.Size([8, 88])\n",
+      "torch.Size([8, 62])\n",
+      "torch.Size([8, 62])\n",
+      "torch.Size([8, 87])\n",
+      "torch.Size([8, 87])\n",
       "torch.Size([8, 66])\n",
       "torch.Size([8, 66])\n",
-      "torch.Size([8, 82])\n",
-      "torch.Size([8, 82])\n",
-      "torch.Size([8, 78])\n",
-      "torch.Size([8, 78])\n"
+      "torch.Size([8, 88])\n",
+      "torch.Size([8, 88])\n",
+      "torch.Size([8, 73])\n",
+      "torch.Size([8, 73])\n"
      ]
     }
    ],
@@ -555,23 +555,108 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\anaconda3\\Lib\\site-packages\\urllib3\\connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'openaipublic.blob.core.windows.net'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error downloading the file: HTTPSConnectionPool(host='openaipublic.blob.core.windows.net', port=443): Max retries exceeded with url: /gpt-2/models%5C355M%5Ccheckpoint (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x0000015FD7F070D0>: Failed to resolve 'openaipublic.blob.core.windows.net' ([Errno 11001] getaddrinfo failed)\"))\n",
-      "please check the url : https://openaipublic.blob.core.windows.net/gpt-2/models\\355M\\checkpoint\n",
-      "Error downloading the file: HTTPSConnectionPool(host='openaipublic.blob.core.windows.net', port=443): Max retries exceeded with url: /gpt-2/models%5C355M%5Cencoder.json (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x0000015FD807EA50>: Failed to resolve 'openaipublic.blob.core.windows.net' ([Errno 11001] getaddrinfo failed)\"))\n",
-      "please check the url : https://openaipublic.blob.core.windows.net/gpt-2/models\\355M\\encoder.json\n",
-      "Error downloading the file: HTTPSConnectionPool(host='openaipublic.blob.core.windows.net', port=443): Max retries exceeded with url: /gpt-2/models%5C355M%5Chparams.json (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x0000015FD808CC50>: Failed to resolve 'openaipublic.blob.core.windows.net' ([Errno 11001] getaddrinfo failed)\"))\n",
-      "please check the url : https://openaipublic.blob.core.windows.net/gpt-2/models\\355M\\hparams.json\n",
-      "Error downloading the file: HTTPSConnectionPool(host='openaipublic.blob.core.windows.net', port=443): Max retries exceeded with url: /gpt-2/models%5C355M%5Cmodel.ckpt.data-00000-of-00001 (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x0000015FD808ED90>: Failed to resolve 'openaipublic.blob.core.windows.net' ([Errno 11001] getaddrinfo failed)\"))\n",
-      "please check the url : https://openaipublic.blob.core.windows.net/gpt-2/models\\355M\\model.ckpt.data-00000-of-00001\n",
-      "Error downloading the file: HTTPSConnectionPool(host='openaipublic.blob.core.windows.net', port=443): Max retries exceeded with url: /gpt-2/models%5C355M%5Cmodel.ckpt.index (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x0000015FD808EE10>: Failed to resolve 'openaipublic.blob.core.windows.net' ([Errno 11001] getaddrinfo failed)\"))\n",
-      "please check the url : https://openaipublic.blob.core.windows.net/gpt-2/models\\355M\\model.ckpt.index\n",
-      "Error downloading the file: HTTPSConnectionPool(host='openaipublic.blob.core.windows.net', port=443): Max retries exceeded with url: /gpt-2/models%5C355M%5Cmodel.ckpt.meta (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x0000015FD808C210>: Failed to resolve 'openaipublic.blob.core.windows.net' ([Errno 11001] getaddrinfo failed)\"))\n",
-      "please check the url : https://openaipublic.blob.core.windows.net/gpt-2/models\\355M\\model.ckpt.meta\n",
-      "Error downloading the file: HTTPSConnectionPool(host='openaipublic.blob.core.windows.net', port=443): Max retries exceeded with url: /gpt-2/models%5C355M%5Cvocab.bpe (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x0000015FD7F6FFD0>: Failed to resolve 'openaipublic.blob.core.windows.net' ([Errno 11001] getaddrinfo failed)\"))\n",
-      "please check the url : https://openaipublic.blob.core.windows.net/gpt-2/models\\355M\\vocab.bpe\n"
+      "File already exists and is up to date\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\anaconda3\\Lib\\site-packages\\urllib3\\connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'openaipublic.blob.core.windows.net'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists and is up to date\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\anaconda3\\Lib\\site-packages\\urllib3\\connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'openaipublic.blob.core.windows.net'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists and is up to date\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\anaconda3\\Lib\\site-packages\\urllib3\\connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'openaipublic.blob.core.windows.net'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists and is up to date\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\anaconda3\\Lib\\site-packages\\urllib3\\connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'openaipublic.blob.core.windows.net'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists and is up to date\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\anaconda3\\Lib\\site-packages\\urllib3\\connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'openaipublic.blob.core.windows.net'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists and is up to date\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hp\\anaconda3\\Lib\\site-packages\\urllib3\\connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'openaipublic.blob.core.windows.net'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists and is up to date\n"
      ]
     }
    ],
@@ -1368,9 +1453,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_14192\\3769376521.py:2: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_6212\\3769376521.py:2: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  print(token_to_text(torch.tensor(input_batch[1]),tokenizer))\n",
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_14192\\3769376521.py:3: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_6212\\3769376521.py:3: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  print(torch.tensor(output_batch[1]))\n"
      ]
     }
@@ -1504,7 +1589,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_14192\\2547036485.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_6212\\2547036485.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  checkpoint = torch.load(\"checkpoints/gpt_checkpoint_epoch_3.pth\", map_location=device)\n"
      ]
     },
@@ -2099,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "id": "c2f2caea",
    "metadata": {},
    "outputs": [
@@ -2126,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "id": "c779a192",
    "metadata": {},
    "outputs": [
@@ -2151,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "id": "81dd9201",
    "metadata": {},
    "outputs": [
@@ -2181,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 54,
    "id": "8b217b0f",
    "metadata": {},
    "outputs": [
@@ -2191,7 +2276,7 @@
        "110"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2202,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 55,
    "id": "031bf263",
    "metadata": {},
    "outputs": [
@@ -2227,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 56,
    "id": "173c9c33",
    "metadata": {},
    "outputs": [
@@ -2257,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 57,
    "id": "ca215d46",
    "metadata": {},
    "outputs": [
@@ -2343,45 +2428,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 58,
    "id": "9c47b869",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 110/110 [23:00<00:00, 12.55s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from tqdm import tqdm\n",
+    "# from tqdm import tqdm\n",
     "\n",
-    "for i, entry in tqdm(enumerate(test_data), total=len(test_data)):\n",
+    "# for i, entry in tqdm(enumerate(test_data), total=len(test_data)):\n",
     "\n",
-    "    input_text = format_input(entry)\n",
+    "#     input_text = format_input(entry)\n",
     "\n",
-    "    token_ids = generate(\n",
-    "        model=model,\n",
-    "        idx=text_to_token(input_text, tokenizer).to(device),\n",
-    "        max_new_token=256,\n",
-    "        context_size=NEW_CONFIG[\"context_length\"],\n",
-    "        eos_id=50256\n",
-    "    )\n",
-    "    generated_text = token_to_text(token_ids, tokenizer)\n",
-    "    response_text = generated_text[len(input_text):].replace(\"### Response:\", \"\").strip()\n",
+    "#     token_ids = generate(\n",
+    "#         model=model,\n",
+    "#         idx=text_to_token(input_text, tokenizer).to(device),\n",
+    "#         max_new_token=256,\n",
+    "#         context_size=NEW_CONFIG[\"context_length\"],\n",
+    "#         eos_id=50256\n",
+    "#     )\n",
+    "#     generated_text = token_to_text(token_ids, tokenizer)\n",
+    "#     response_text = generated_text[len(input_text):].replace(\"### Response:\", \"\").strip()\n",
     "\n",
-    "    test_data[i][\"model_response\"] = response_text\n",
+    "#     test_data[i][\"model_response\"] = response_text\n",
     "\n",
     "\n",
-    "with open(\"instruction-data-with-response.json\", \"w\") as file:\n",
-    "    json.dump(test_data, file, indent=4)  # \"indent\" for pretty-printing"
+    "# with open(\"instruction-data-with-response.json\", \"w\") as file:\n",
+    "#     json.dump(test_data, file, indent=4)  # \"indent\" for pretty-printing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 59,
    "id": "60512e57",
    "metadata": {},
    "outputs": [
@@ -2389,7 +2466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'instruction': 'Rewrite the sentence using a simile.', 'input': 'The car is very fast.', 'output': 'The car is as fast as lightning.', 'model_response': 'The car is a fast car.'}\n"
+      "{'instruction': 'Rewrite the sentence using a simile.', 'input': 'The car is very fast.', 'output': 'The car is as fast as lightning.'}\n"
      ]
     }
    ],
@@ -2399,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 60,
    "id": "7f0caa92",
    "metadata": {},
    "outputs": [
